--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,21 @@
         </section>
     </nav>
 </div>
-<div class="row" data-equalizer >
+<div class="row" data-equalizer>
     <div class="large-12 columns panel" data-equalizer-watch style="background-color: #ff8000">
-        <p>Disclaimer: Dies ist eine Fanwebseite für Ingress und steht in keinem Verhältnis zu Ingress oder Niantic Labs.</p>
+        <p>Disclaimer: Dies ist eine Fanwebseite für Ingress und steht in keinem Verhältnis zu Ingress oder Niantic
+            Labs.</p>
     </div>
 </div>
 <div class="row" data-equalizer>
     <div class="large-6 columns panel" data-equalizer-watch>
-        Fehlt ein Mosaik? Hast du Fragen oder Hinweise zur Seite? Kontaktiert mich einfach in <a href="https://plus.google.com/+CarstenStemmler">Google+/Hangouts</a> oder schreibt mir eine
+        Fehlt ein Mosaik? Hast du Fragen oder Hinweise zur Seite? Kontaktiert mich einfach in <a
+            href="https://plus.google.com/+CarstenStemmler">Google+/Hangouts</a> oder schreibt mir eine
         <a href="mailto:tallistroan@gmail.com">E-Mail</a>.
     </div>
     <div class="large-6 columns panel" data-equalizer-watch>
-        <p>Achtung: Ich übernehme keine Gewähr für die Richtigkeit oder Vollständigkeit der Karte und Mosaikdaten. Im Zweifel sollte immer die Intel vor einer geplanten Tour angeschaut werden.</p>
+        <p>Achtung: Ich übernehme keine Gewähr für die Richtigkeit oder Vollständigkeit der Karte und Mosaikdaten. Im
+            Zweifel sollte immer die Intel vor einer geplanten Tour angeschaut werden.</p>
     </div>
 </div>
 <script src="js/vendor/jquery.js"></script>
