--- a/info.html
+++ b/info.html
@@ -40,11 +40,18 @@
             <li>Missionen mit beliebiger Reihenfolge sind gestrichelt dargestellt</li>
             <li>Missionen mit fester Reihenfolge werden als durchgehende Linie dargestellt</li>
             <li>Missionen mit versteckten Wegpunkten werden am Startpunkt mit einem Fragezeichen gekennzeichnet</li>
-            <li>Der Start jeder Mission ist mit der jeweiligen Nummer bzw. mehreren Nummern der Mosaikreihenfolge beschriftet</li>
-			<li>Die angegebene Länge bezieht sich auf die Luftlinie zwischen den einzelnen Portalen inkl. der Entfernung zwischen den einzelnen Missionen. Die reale Länge kann abweichend sein</li>
-			<li>Die Dauer bezieht sich auf die Zeit, die andere Agenten bisher dafür benötigt haben. Besonders bei großen Abständen zwischen den Einzelmissionen kann die real benötigte Zeit abweichend sein</li>
+            <li>Der Start jeder Mission ist mit der jeweiligen Nummer bzw. mehreren Nummern der Mosaikreihenfolge
+                beschriftet
+            </li>
+            <li>Die angegebene Länge bezieht sich auf die Luftlinie zwischen den einzelnen Portalen inkl. der Entfernung
+                zwischen den einzelnen Missionen. Die reale Länge kann abweichend sein
+            </li>
+            <li>Die Dauer bezieht sich auf die Zeit, die andere Agenten bisher dafür benötigt haben. Besonders bei
+                großen Abständen zwischen den Einzelmissionen kann die real benötigte Zeit abweichend sein
+            </li>
         </ul>
-        <p>Hinweis: Fieldtrip Waypoints werden auf der Karte nicht dargestellt, daher können Missionen vereinzelt nicht in ihrer tatsächlichen Länge sichtbar sein.</p>
+        <p>Hinweis: Fieldtrip Waypoints werden auf der Karte nicht dargestellt, daher können Missionen vereinzelt nicht
+            in ihrer tatsächlichen Länge sichtbar sein.</p>
 
     </div>
 </div>
@@ -52,8 +59,11 @@
     <div class="large-12 columns panel" data-equalizer-watch>
         <h3>Changelog</h3>
         <ul>
-			<li>13.01.2016: v2.1 - Anzeige von Dauer + Länge + genaue Anzahl der Aktionen je Mosaik, Downloadmöglichkeit der Mosaik-Route als kml-Datei
-            <li>04.01.2016: v2.0 - komplett überarbeitetes Design, Portalanzahl total/unique für jedes Mosaik wird angezeigt, Übersichtskarte enthält Startpunkte der einzelnen Mosaike</li>
+            <li>13.01.2016: v2.1 - Anzeige von Dauer + Länge + genaue Anzahl der Aktionen je Mosaik, Downloadmöglichkeit
+                der Mosaik-Route als kml-Datei
+            <li>04.01.2016: v2.0 - komplett überarbeitetes Design, Portalanzahl total/unique für jedes Mosaik wird
+                angezeigt, Übersichtskarte enthält Startpunkte der einzelnen Mosaike
+            </li>
             <li>02.12.2015: v1.0 - Veröffentlichung der Webseite, alle grundlegenden Funktionen vorhanden</li>
             <li>15.11.2015: v0.1 - erste beta-Version</li>
         </ul>
