Add more comments and clean up code

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="de">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,6 +39,7 @@
     </div>
 </div>
 <div class="row" data-equalizer>
+    <!-- in case you forked the project, please provide your own contact details here-->
     <div class="large-6 columns panel" data-equalizer-watch>
         Fehlt ein Mosaik? Hast du Fragen oder Hinweise zur Seite? Kontaktiert mich einfach in <a
             href="https://plus.google.com/+CarstenStemmler">Google+/Hangouts</a> oder schreibt mir eine
