--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="de">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
@@ -35,6 +35,7 @@
 </div>
 <div class="row" data-equalizer>
     <div class="large-12 columns panel" data-equalizer-watch>
+        <!-- legend for the map, you can describe the map with words or also could provide a picture with a visible mosaic -->
         <h3>Legende</h3>
         <ul>
             <li>Missionen mit beliebiger Reihenfolge sind gestrichelt dargestellt</li>
@@ -57,6 +58,7 @@
 </div>
 <div class="row" data-equalizer>
     <div class="large-12 columns panel" data-equalizer-watch>
+        <!-- changelog visible for users -->
         <h3>Changelog</h3>
         <ul>
             <li>13.01.2016: v2.1 - Anzeige von Dauer + Länge + genaue Anzahl der Aktionen je Mosaik, Downloadmöglichkeit
