Update contact.html with link to github

--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,17 @@
             Zweifel sollte immer die Intel vor einer geplanten Tour angeschaut werden.</p>
     </div>
 </div>
+<div class="row" data-equalizer>
+    <div class="large-12 columns panel" data-equalizer-watch>
+        <p>DE: Möchtest du für deine Stadt/Region selbst eine Mosaikübersicht wie diese erstellen?
+            Gerne kannst du das <a href="https://github.com/tallistroan/IngressMosaicMissionMap">Repository auf github</a> forken und deine eigene Version erstellen.
+
+        </p>
+        <p>EN: Do you want to create a version for your city/region in this style?
+            Find the <a href="https://github.com/tallistroan/IngressMosaicMissionMap">code on github</a> and feel free to fork it and create your own version.</p>
+        <p></p>
+    </div>
+</div>
 <script src="js/vendor/jquery.js"></script>
 <script src="js/foundation.min.js"></script>
 <script>
