--- a/overview.html
+++ b/overview.html
@@ -193,6 +193,9 @@
     addMissions(nymphenburg_startMissions.features[0], nymphenburg_mission, 'a');
     addMissions(schleiss_startMissions.features[0], schleiss_mission, 'a');
 
+    /**
+     * adds mission details to the overview page
+     */
     function addMissions(feature, mission, panelName) {
 
         var arrayPortals = [];
@@ -253,28 +256,28 @@
 
         var actionsString = [];
         if (countActionHack > 0) {
-            actionsString.push(countActionHack + ' x Hack')
+            actionsString.push(countActionHack + ' x Hack'); // hack
         }
         if (countActionCapture > 0) {
-            actionsString.push(countActionCapture + ' x Capture oder Upgrade')
+            actionsString.push(countActionCapture + ' x Capture oder Upgrade'); // capture or upgrade
         }
         if (countActionLink > 0) {
-            actionsString.push(countActionLink + ' x Link erstellen')
+            actionsString.push(countActionLink + ' x Link erstellen'); // create link from portal
         }
         if (countActionField > 0) {
-            actionsString.push(countActionField + ' x Feld erstellen')
+            actionsString.push(countActionField + ' x Feld erstellen'); // create field from portal
         }
         if (countActionMod > 0) {
-            actionsString.push(countActionMod + ' x Mod deployen')
+            actionsString.push(countActionMod + ' x Mod deployen'); // deploy mod
         }
         if (countActionPhoto > 0) {
-            actionsString.push(countActionPhoto + ' x Photo machen')
+            actionsString.push(countActionPhoto + ' x Photo machen'); // take photo, action not available in the mission editor
         }
         if (countActionViewWaypoint > 0) {
-            actionsString.push(countActionViewWaypoint + ' x Fieldtrip Waypoint')
+            actionsString.push(countActionViewWaypoint + ' x Fieldtrip Waypoint'); // view fieldtrip waypoint
         }
         if (countActionPassphrase > 0) {
-            actionsString.push(countActionPassphrase + ' x Passphrase eingeben')
+            actionsString.push(countActionPassphrase + ' x Passphrase eingeben'); // enter passphrase
         }
 
         asOf = new Date(mission.features[0].properties.time);
@@ -286,16 +289,16 @@
                 '<img id="' + feature.properties.id + '" class="overviewPic" src="' + feature.properties.imagePath + '"></div>' +
                 '<div class="large-6 columns panel" data-equalizer-watch>' +
                 '<h4>' + feature.properties.title + '</h4>' +
-                '<div><span>Ersteller: </span>' + mission.features[0].properties.author +
-                '</div><div><span>Zeit: </span>ca. ' + calcTime(medianCompletionTime) +
-                '</div><div><span>Länge: </span>ca. ' + outputMissionLength +
-                '</div><div><span>Aktionen: </span>' + actionsString.join(", ") +
-                '</div><div><span>Gesamtanzahl Portale: </span>' + arrayPortals.length +
-                '</div><div><span>Anzahl Unique Portale: </span>' + unique(arrayPortals).length +
-                '</div><div><span>Mehr: </span>' + feature.properties.description +
-                '</div><div><span>Stand vom: </span>' + asOf.getDate() + '.' + (asOf.getMonth()) + 1 + '.' + asOf.getFullYear() +
-                '</div><div><span>Download: </span><a href="' + feature.properties.imagePath.replace('pics', 'kml').replace('.jpg', '.kml') + '">Download als kml</a>' +
-                '</div><div><span>Karte: </span><a href="index.html?id=' + feature.properties.id + '">Mosaik auf Karte ansehen</a></div>';
+                '<div><span>Ersteller: </span>' + mission.features[0].properties.author + // author
+                '</div><div><span>Zeit: </span>ca. ' + calcTime(medianCompletionTime) + // median completion time
+                '</div><div><span>Länge: </span>ca. ' + outputMissionLength + // // length of the mission, linear distance including the distance between the individual missions
+                '</div><div><span>Aktionen: </span>' + actionsString.join(", ") + // type and count of actions that need to be fulfilled during the mosaic
+                '</div><div><span>Gesamtanzahl Portale: </span>' + arrayPortals.length + // number of total portals in the mosaic
+                '</div><div><span>Anzahl Unique Portale: </span>' + unique(arrayPortals).length + // number of unique portals a player visits during the mosaic, contains no portals between the individual missions
+                '</div><div><span>Mehr: </span>' + feature.properties.description + // shows the description specified during the export process from the intel
+                '</div><div><span>Stand vom: </span>' + asOf.getDate() + '.' + (asOf.getMonth()) + 1 + '.' + asOf.getFullYear() + // mission data as of the export date from the mosaic
+                '</div><div><span>Download: </span><a href="' + feature.properties.imagePath.replace('pics', 'kml').replace('.jpg', '.kml') + '">Download als kml</a>' + // create downloadlink for the kml file, which was specified during export from the intel
+                '</div><div><span>Karte: </span><a href="index.html?id=' + feature.properties.id + '">Mosaik auf Karte ansehen</a></div>'; // creates link for directly viewing on the map
         // check if a G+ Post is available
         if (feature.properties.info != "---") {
             tempString += '<div><span>G+: </span><a href="' + feature.properties.info +
@@ -307,7 +310,11 @@
         }
         document.getElementById(panelName).innerHTML = document.getElementById(panelName).innerHTML + tempString;
     }
-    // function to determine the number of unique portals in the mosaic
+    /**
+     * function to determine the number of unique portals in the mosaic
+     * @param array with all portals
+     * @returns
+     */
     function unique(a) {
         var seen = new Set();
         return a.filter(function (x) {
