--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Mosaikmissionen München</title>
+    <title>Mosaikmissionen München</title> <!-- version for Munich -->
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/ownStyle.css"/>
     <script src="js/vendor/modernizr.js"></script>
