Update overview with example

--- a/overview.html
+++ b/overview.html
@@ -62,8 +62,9 @@
      use the same name as specific in the var mosaicName during export from intel,
      change only the mosaicName in the template
      template: addMissions(mosaicName_startMissions.features[0], mosaicName_mission, 'a');
-     */
 
+     */
+    addMissions(nymphenburg_startMissions.features[0], nymphenburg_mission, 'a');
     /**
      * adds mission details to the overview page
      */
